frame/support/test/tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.stderr
error[E0277]: the trait bound `Bar: TypeInfo` is not satisfied
  --> $DIR/storage_ensure_span_are_ok_on_wrong_gen.rs:20:12
   |
20 |     #[pallet::storage]
   |               ^^^^^^^ the trait `TypeInfo` is not implemented for `Bar`
   |
   = note: required because of the requirements on the impl of `StaticTypeInfo` for `Bar`
   = note: required because of the requirements on the impl of `frame_support::storage::StorageEntryMetadata` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
   = note: required by `NAME`

error[E0277]: the trait bound `Bar: WrapperTypeDecode` is not satisfied
  --> $DIR/storage_ensure_span_are_ok_on_wrong_gen.rs:20:12
   |
20 |     #[pallet::storage]
   |               ^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `Bar`
   |
   = note: required because of the requirements on the impl of `Decode` for `Bar`
   = note: required because of the requirements on the impl of `FullCodec` for `Bar`
   = note: required because of the requirements on the impl of `frame_support::storage::StorageEntryMetadata` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
   = note: required by `NAME`

error[E0277]: the trait bound `Bar: EncodeLike` is not satisfied
  --> $DIR/storage_ensure_span_are_ok_on_wrong_gen.rs:20:12
   |
20 |     #[pallet::storage]
   |               ^^^^^^^ the trait `EncodeLike` is not implemented for `Bar`
   |
   = note: required because of the requirements on the impl of `FullEncode` for `Bar`
   = note: required because of the requirements on the impl of `FullCodec` for `Bar`
   = note: required because of the requirements on the impl of `frame_support::storage::StorageEntryMetadata` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
   = note: required by `NAME`

error[E0277]: the trait bound `Bar: WrapperTypeEncode` is not satisfied
  --> $DIR/storage_ensure_span_are_ok_on_wrong_gen.rs:20:12
   |
20 |     #[pallet::storage]
   |               ^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `Bar`
   |
   = note: required because of the requirements on the impl of `Encode` for `Bar`
   = note: required because of the requirements on the impl of `FullEncode` for `Bar`
   = note: required because of the requirements on the impl of `FullCodec` for `Bar`
   = note: required because of the requirements on the impl of `frame_support::storage::StorageEntryMetadata` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
   = note: required by `NAME`

error[E0277]: the trait bound `Bar: WrapperTypeDecode` is not satisfied
 --> $DIR/storage_ensure_span_are_ok_on_wrong_gen.rs:9:12
  |
9 |     #[pallet::pallet]
  |               ^^^^^^ the trait `WrapperTypeDecode` is not implemented for `Bar`
  |
  = note: required because of the requirements on the impl of `Decode` for `Bar`
  = note: required because of the requirements on the impl of `FullCodec` for `Bar`
  = note: required because of the requirements on the impl of `PartialStorageInfoTrait` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
  = note: required by `partial_storage_info`

error[E0277]: the trait bound `Bar: EncodeLike` is not satisfied
 --> $DIR/storage_ensure_span_are_ok_on_wrong_gen.rs:9:12
  |
9 |     #[pallet::pallet]
  |               ^^^^^^ the trait `EncodeLike` is not implemented for `Bar`
  |
  = note: required because of the requirements on the impl of `FullEncode` for `Bar`
  = note: required because of the requirements on the impl of `FullCodec` for `Bar`
  = note: required because of the requirements on the impl of `PartialStorageInfoTrait` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
  = note: required by `partial_storage_info`

error[E0277]: the trait bound `Bar: WrapperTypeEncode` is not satisfied
 --> $DIR/storage_ensure_span_are_ok_on_wrong_gen.rs:9:12
  |
9 |     #[pallet::pallet]
  |               ^^^^^^ the trait `WrapperTypeEncode` is not implemented for `Bar`
  |
  = note: required because of the requirements on the impl of `Encode` for `Bar`
  = note: required because of the requirements on the impl of `FullEncode` for `Bar`
  = note: required because of the requirements on the impl of `FullCodec` for `Bar`
  = note: required because of the requirements on the impl of `PartialStorageInfoTrait` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
  = note: required by `partial_storage_info`
